fine progetto + bonus

--- a/css/style.css
+++ b/css/style.css
@@ -471,9 +471,9 @@ main #sixth-section h2{
 }
 
 main #sixth-section .answer{
-    height: 50px;
-    line-height: 50px;
     vertical-align: middle;
+    padding: 10px 0;
+    width: 90%;
 }
 
 .float-l{
